--- a/frontend/src/app/core/components/sidenav/sidenav-component.scss
+++ b/frontend/src/app/core/components/sidenav/sidenav-component.scss
@@ -37,7 +37,7 @@ mat-sidenav {
 	display: flex;
 	flex-direction: row;
 	gap: 1.5px;
-	justify-content: space-around;
+	justify-content: space-between;
 }
 
 a.active {
