--- a/frontend/src/app/planes/pages/plane-list-page/plane-list.page.html
+++ b/frontend/src/app/planes/pages/plane-list-page/plane-list.page.html
@@ -1,10 +1,6 @@
 <section>
 	@for (plane of planes; track $index) {
-		<se-plane [entity]="plane">
-		</se-plane>
-
-
-
+		<se-plane [entity]="plane" />
 	}
 </section>
 <section>
