--- a/frontend/src/app/users/components/user-list/user-list.component.html
+++ b/frontend/src/app/users/components/user-list/user-list.component.html
@@ -1,3 +1,4 @@
+<section>
 @if (users == null) {
 	<mat-progress-spinner color="primary" mode="indeterminate" />
 }
@@ -15,3 +16,4 @@
 		<ion-infinite-scroll-content></ion-infinite-scroll-content>
 	</ion-infinite-scroll> -->
 }
+</section>
