--- a/frontend/src/app/users/components/user/user.component.html
+++ b/frontend/src/app/users/components/user/user.component.html
@@ -1,5 +1,5 @@
 @if (entity) {
-<mat-card class="user" appearance="outlined">
+<mat-card class="entity user" appearance="outlined">
 	<a [routerLink]="['/users', entity.id]">
 		<mat-card-header>
 			<div class="user__avatar" mat-card-avatar></div>
