--- a/frontend/src/app/dashboard/pages/dashboard.page.scss
+++ b/frontend/src/app/dashboard/pages/dashboard.page.scss
@@ -1,33 +1,30 @@
-.dashboard__content {
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 10px;
-    background-color: #fff;
-    border-radius: 10px;
-    width: 100vh;
-    height: auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.dashboard__content > .grid__container {
+	grid-template-columns: 25% 75%;
+	grid-template-rows: auto repeat(2, 35vh);
+	gap: 1rem 3rem;
+	width: 100%;
 
+	& > * {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
+		text-align: center;
+	}
 }
 
-.dashboard__content__body__calendar { // TODO: GUILLAUME
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 10px;
-    background-color: #fff;
-    border-radius: 10px;
-    width: 25vh;
-    height: auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border: 1px solid black;
-}
+.upcoming-courses {
+	padding: 2rem;
+	grid-row: 1 / -1;
 
-.dashboard__content__body__calendar__header{
-    text-align: center;
+	&__content {
+		display: grid;
+		gap: 1rem;
+		width: 100%;
+		height: 100%;
+		grid-template-rows: repeat(3, 1fr);
+		// grid-template-columns: 100%;
+	}
 }
