--- a/frontend/src/app/planes/components/plane/plane.component.scss
+++ b/frontend/src/app/planes/components/plane/plane.component.scss
@@ -1,52 +1,34 @@
+:host > mat-card {
+	height: 100%;
+	width: 100%;
+}
 
 
+mat-card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border-radius: 1rem;
+	// :hover {
+	// 	cursor: pointer;
+	// 	border-radius: 20px;
+	// 	background-color: #24265A;
 
+	// 	* {
+	// 		transition: all 0.5s ease-in-out;
+	// 		background-color: #24265A;
 
-:host{
-
-	mat-card-title {
-		text-align: center;
-		font-style: bold;
-		font-family: "Russo One", sans-serif;
-		margin:0.5rem;
-		color: #24265A;
-
-	}
-	mat-content {
-		padding: 0.5rem;
-	}
-	mat-card {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		border-radius: 1rem;
-		:hover {
-			cursor: pointer;
-			border-radius: 20px;
-			background-color: #24265A;
-
-			* {
-				transition: all 0.5s ease-in-out;
-				background-color: #24265A;
-
-			}
-			mat-card-actions {
-				*{
-					background-color: red;
-				}
-			}
-			mat-card-title {
-				color: white;
-			}
-			mat-card-subtitle {
-				color: white;
-			}
-		}
-
-	}
-	mat-card-subtitle {
-		color: #24265A;
-		font-family: "Russo One", sans-serif;
-		text-align: center;
-	}
+	// 	}
+	// 	mat-card-actions {
+	// 		*{
+	// 			background-color: red;
+	// 		}
+	// 	}
+	// 	mat-card-title {
+	// 		color: white;
+	// 	}
+	// 	mat-card-subtitle {
+	// 		color: white;
+	// 	}
+	// }
 }
