--- a/frontend/src/app/planes/pages/create-plane-page/create-plane.page.html
+++ b/frontend/src/app/planes/pages/create-plane-page/create-plane.page.html
@@ -3,7 +3,7 @@
 	<img src="../../../../assets/vue-avion.png" alt="image" class="course-picture">
 
 	<div class="book-spread__page">
-		<mat-card-title class="mat-card-title-create-form"><h1>Ajouter un Avion</h1></mat-card-title>
+		<mat-card-title><h1>Ajouter un Avion</h1></mat-card-title>
 		<div class="line"></div>
 
 		<mat-card>
