--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -12,6 +12,8 @@
 
 	--mdc-protected-button-container-height: 40px;
 	--mat-protected-button-horizontal-padding: 50px;
+	--mat-card-title-text-font: "Russo One", sans-serif;
+	--mat-card-subtitle-text-font: "Russo One", sans-serif;
 }
 
 a {
@@ -60,42 +62,43 @@ form.grid {
 	height: 100%;
 	width: 100%;
 	padding: 1rem;
+}
 
-	& .grid__container {
-		display: grid;
-		grid-auto-rows: minmax(70px, auto);
-		grid-gap: 3px;
-		width: 100%;
+form.grid > .grid__container, .grid__container {
+	display: grid;
+	grid-auto-rows: minmax(70px, auto);
+	grid-gap: 3px;
 
-		& > * {
-			display: flex;
-			justify-content: flex-start;
-			align-items: center;
-			text-align: start;
-		}
-
-		& .grid__child {
-			&--full-width {
-				grid-column: 1 / -1;
-				text-align: center;
-			}
-
-			&--full-height {
-				grid-row: 1 / -1;
-			}
-		}
+	& > * {
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		text-align: start;
 	}
 
+	& .grid__child {
+		&--full-width {
+			grid-column: 1 / -1;
+			text-align: center;
+		}
 
-
+		&--full-height {
+			grid-row: 1 / -1;
+		}
+	}
 }
 
 mat-card-title {
+	text-align: center;
 	font-style: bold;
-	font-family: "Russo One", sans-serif;
-	margin:0.5rem;
-
+	margin: 0.5rem;
 }
+
+mat-card-subtitle {
+	text-align: center;
+}
+
+
 mat-card {
 	display: flex;
 	flex-direction: column;
@@ -103,10 +106,15 @@ mat-card {
 
 	border-radius: 1rem;
 
+	&.entity {
+		padding: 20px;
+		border-radius: 1rem;
+		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+		transition: all 0.3s;
+	}
 }
 
 mat-label {
-	color: #24265A;
 	font-size: 1rem;
 	font-family: "Russo One", sans-serif;
 	text-align: center;
