--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -29,20 +29,20 @@ $se-primary: (
 	A400 : #6b9fff,
 	A700 : #528fff,
 	contrast: (
-		50 : #000000,
-		100 : #000000,
-		200 : #000000,
-		300 : #000000,
+		50 : #24265A,
+		100 : #24265A,
+		200 : #24265A,
+		300 : #24265A,
 		400 : #ffffff,
 		500 : #ffffff,
 		600 : #ffffff,
 		700 : #ffffff,
 		800 : #ffffff,
 		900 : #ffffff,
-		A100 : #000000,
-		A200 : #000000,
-		A400 : #000000,
-		A700 : #000000,
+		A100 : #24265A,
+		A200 : #24265A,
+		A400 : #24265A,
+		A700 : #24265A,
 	)
 );
 $SkyExplorer-primary: mat.define-palette($se-primary);
@@ -63,9 +63,9 @@ $se-accent: (
 	A400 : #0505ff,
 	A700 : #0000eb,
 	contrast: (
-		50 : #000000,
-		100 : #000000,
-		200 : #000000,
+		50 : #24265A,
+		100 : #24265A,
+		200 : #24265A,
 		300 : #ffffff,
 		400 : #ffffff,
 		500 : #ffffff,
