Added Time-Relative Queries to Courses and Flights

--- a/frontend/src/app/courses/components/course-timeline/course-timeline.component.html
+++ b/frontend/src/app/courses/components/course-timeline/course-timeline.component.html
@@ -49,8 +49,8 @@
 	<mat-form-field>
 		<mat-label>Affichage</mat-label>
 		<mat-select matInput [(value)]="displayMode">
-			<mat-option [value]="DisplayMode.Weekly">Par Semaine</mat-option>
-			<mat-option [value]="DisplayMode.Monthly">Par Mois</mat-option>
+			<mat-option value="Weekly">Par Semaine</mat-option>
+			<mat-option value="Monthly">Par Mois</mat-option>
 		</mat-select>
 	</mat-form-field>
 }
