--- a/frontend/src/app/courses/components/course/course.component.html
+++ b/frontend/src/app/courses/components/course/course.component.html
@@ -1,38 +1,41 @@
-@if (entity) {
-<mat-card class="entity course" [ngStyle]="{'background-color': stringToColor(entity.name.substring(0, 5))}">
-	<!-- <mat-card-header> -->
-		<a [matMenuTriggerFor]="coursePreview" aria-label="Options de Cours">
-			<mat-card-title>
-				{{ entity.name }}
-			</mat-card-title>
-		</a>
-	<!-- </mat-card-header>
-	<mat-card-content> -->
-		{{ entity.flight.plane.name }}
-	<!-- </mat-card-content> -->
-</mat-card>
-<mat-menu #coursePreview="matMenu" xPosition="after" yPosition="above">
-	<mat-card class="course__menu" appearance="outlined">
-		<mat-card-header>
-			<a [routerLink]="['/courses', entity.id]">
-				<mat-card-title>{{ entity.name }}</mat-card-title>
-				<mat-card-subtitle>Avion: {{ entity.flight.plane.name }}</mat-card-subtitle>
+@if (entity === undefined) {
+	<mat-spinner color="primary"></mat-spinner>
+}
+@else if (entity && authentication.user && (authentication.user.id === entity.flight.overseer.id || authentication.user.id === entity.flight.user.id || authentication.user.role >= UserRoles.Staff)) {
+	<mat-card class="entity course" [ngStyle]="{'background-color': stringToColor(entity.name.substring(0, 5))}">
+		<!-- <mat-card-header> -->
+			<a [matMenuTriggerFor]="coursePreview" aria-label="Options de Cours">
+				<mat-card-title>
+					{{ entity.name }}
+				</mat-card-title>
 			</a>
-		</mat-card-header>
-		<mat-card-content>
-			<mat-card-title>{{ entity.flight.overseer.lastName }}</mat-card-title>
-			<!-- <span>{{ moment(entity.flight.dateTime) }}</span> -->
-			<mat-card-subtitle>{{ moment(entity.flight.dateTime).toDate().toLocaleDateString("fr-FR", { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric', hour: 'numeric', minute: 'numeric', second: 'numeric' }) }}</mat-card-subtitle>
-			<mat-card-subtitle>Durée: {{ entity.flight.duration }}</mat-card-subtitle>
-		</mat-card-content>
-		<mat-card-actions>
-			@if (authentication.user && (authentication.user.role >= UserRoles.Collaborator || entity.flight.overseer.id == authentication.user.id)) {
-				<button class="course__delete-btn" mat-raised-button (click)="delete()" color="warn">
-					<mat-icon aria-hidden="false" aria-label="Supprimer">delete</mat-icon>
-					<mat-label>Supprimer</mat-label>
-				</button>
-			}
-		</mat-card-actions>
+		<!-- </mat-card-header>
+		<mat-card-content> -->
+			{{ entity.flight.plane.name }}
+		<!-- </mat-card-content> -->
 	</mat-card>
-</mat-menu>
+	<mat-menu #coursePreview="matMenu" xPosition="after" yPosition="above">
+		<mat-card class="course__menu" appearance="outlined">
+			<mat-card-header>
+				<a [routerLink]="['/courses', entity.id]">
+					<mat-card-title>{{ entity.name }}</mat-card-title>
+					<mat-card-subtitle>Avion: {{ entity.flight.plane.name }}</mat-card-subtitle>
+				</a>
+			</mat-card-header>
+			<mat-card-content>
+				<mat-card-title>{{ entity.flight.overseer.lastName }}</mat-card-title>
+				<!-- <span>{{ moment(entity.flight.dateTime) }}</span> -->
+				<mat-card-subtitle>{{ moment(entity.flight.dateTime).toDate().toLocaleDateString("fr-FR", { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric', hour: 'numeric', minute: 'numeric', second: 'numeric' }) }}</mat-card-subtitle>
+				<mat-card-subtitle>Durée: {{ entity.flight.duration }}</mat-card-subtitle>
+			</mat-card-content>
+			<mat-card-actions>
+				@if (authentication.user.role >= UserRoles.Staff || entity.flight.overseer.id == authentication.user.id) {
+					<button class="course__delete-btn" mat-raised-button (click)="delete()" color="warn">
+						<mat-icon aria-hidden="false" aria-label="Supprimer">delete</mat-icon>
+						<mat-label>Supprimer</mat-label>
+					</button>
+				}
+			</mat-card-actions>
+		</mat-card>
+	</mat-menu>
 }
