--- a/frontend/src/app/planes/pages/plane-page/plane.page.html
+++ b/frontend/src/app/planes/pages/plane-page/plane.page.html
@@ -1,42 +1,49 @@
+@if (entity === undefined) {
+	<mat-spinner color="primary"></mat-spinner>
+
+}
+@else if (entity && authentication.user){
 <section>
-	@if (entity) {
-	@if (authentication.user && authentication.user.role >= UserRoles.Staff) {
-	<mat-card-title>Modifier l'Avion</mat-card-title>
-	}
-	<div class="line"></div>
+		@if (authentication.user.role >= UserRoles.Staff) {
+			<mat-card-title>Modifier l'Avion</mat-card-title>
+		}
+		<div class="line"></div>
 
-	<mat-card>
-		<form class="grid" [formGroup]="editPlaneForm" (ngSubmit)="onSubmit()">
+		<mat-card>
+			<form class="grid" [formGroup]="editPlaneForm" (ngSubmit)="onSubmit()">
 
-			<mat-card-content class="grid__container">
-				<mat-label class="grid__child--label"><p>Nom de l'Avion</p></mat-label>
-				<span class="grid__child--field">{{ entity.name }}</span>
+				<mat-card-content class="grid__container">
+					<mat-label class="grid__child--label"><p>Nom de l'Avion</p></mat-label>
+					<span class="grid__child--field">{{ entity.name }}</span>
 
-				<mat-label class="grid__child--label">Type</mat-label>
-				<span class="grid__child--field">{{ entity.type}}</span>
+					<mat-label class="grid__child--label">Type</mat-label>
+					<span class="grid__child--field">{{ entity.type}}</span>
 
 
-				@if (authentication.user && authentication.user.role >= UserRoles.Staff) {
-				<mat-form-field class="grid__child--full-width">
-					<mat-label>Statut</mat-label>
-					<mat-select matInput formControlName="status" [value]="status" required>
-						@for (status of planeStatuses; track status) {
-							<mat-option [value]="status">{{ PlaneStatus[status] }}</mat-option>
-						}
-					</mat-select>
-				</mat-form-field>
-				}
-				@else {
-				<mat-label class="grid__child--label">Statut</mat-label>
-				<span class="grid__child--field">{{ entity.status }}</span>
-				}
-			</mat-card-content>
+					@if (authentication.user.role >= UserRoles.Staff) {
+						<mat-form-field class="grid__child--full-width">
+							<mat-label>Statut</mat-label>
+							<mat-select matInput formControlName="status" [value]="status" required>
+								@for (status of planeStatuses; track status) {
+									<mat-option [value]="status">{{ PlaneStatus[status] }}</mat-option>
+								}
+							</mat-select>
+						</mat-form-field>
+					}
+					@else {
+						<mat-label class="grid__child--label">Statut</mat-label>
+						<span class="grid__child--field">{{ entity.status }}</span>
+					}
+				</mat-card-content>
 
-			<mat-card-footer>
-				<button mat-raised-button color="primary" class="button-create-form">Valider</button>
-			</mat-card-footer>
+				<mat-card-footer>
+					<button mat-raised-button color="primary" class="button-create-form">Valider</button>
+				</mat-card-footer>
 
-		</form>
-	</mat-card>
-	}
-</section>
+			</form>
+		</mat-card>
+	</section>
+}
+@else {
+	<mat-card-title>Vous n'avez pas accès à cette page</mat-card-title>
+}
