--- a/frontend/src/app/users/components/user-list/user-list.component.html
+++ b/frontend/src/app/users/components/user-list/user-list.component.html
@@ -5,13 +5,15 @@
 @else if (users.length === 0) {
 	<div> <!--0 ion-title -->
 		<h1>Il n'y a aucun Utilisateur, pour l'instant...</h1>
-		<div>Vous pouvez nous rejoindre <a [routerLink]="['/authentication']">ici</a>. N'attendez plus!</div> <!-- ion-text -->
+		<div>Vous pouvez nous rejoindre <a [routerLink]="['/login']">ici</a>. N'attendez plus!</div> <!-- ion-text -->
 	</div> <!-- ion-title -->
 }
 @else {
 	@for (user of users; track user.id) {
 		<se-user [entity]="user"></se-user>
 	}
+
+
 	<!-- <ion-infinite-scroll (ionInfinite)="onInfiniteScroll($event)">
 		<ion-infinite-scroll-content></ion-infinite-scroll-content>
 	</ion-infinite-scroll> -->
